<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="1dp" >
    
    <Button 
         android:id="@+id/statistic_button_export_csv"
         android:layout_width="wrap_content"
    	 android:layout_height="wrap_content"
         android:text="@string/CSV_Export"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:onClick="onClick"/>
    
    <Button 
         android:id="@+id/statistic_button_reset"
         android:layout_width="wrap_content"
    	 android:layout_height="wrap_content"         
         android:text="@string/btn_reset"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:onClick="onClick"/>

    <ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/statistic_button_reset">
		<TableLayout
	         android:id = "@+id/statistic_table"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="0"
	         android:padding="5dp"
	         android:stretchColumns="*">
	
		     <TableRow
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content" >
	
		         <TextView
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:padding="7dip"
		             android:text="@string/stats_date"
		             android:textStyle="bold" />
	
		         <TextView
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:padding="7dip"
		             android:text="@string/stats_tasks"
		             android:textStyle="bold" />
	
		         <TextView
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:padding="7dip"
		             android:text="@string/stats_level"
		             android:textStyle="bold" />
	
		         <TextView
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:padding="7dip"
		             android:text="@string/stats_right"
		             android:textStyle="bold" />
	         
		     </TableRow> 
		</TableLayout>
	        
    </ScrollView>
    

</RelativeLayout>